[MSE] http/tests/media/media-source/mediasource-endofstream-invaliderror.html is failing. https://bugs.webkit.org/show_bug.cgi?id=134413

Reviewed by Eric Carlson.

Source/WebCore:
Update MediaSource.endOfStream() to take an optional enum instead of an optional String.

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::endOfStream):
* Modules/mediasource/MediaSource.h:
* Modules/mediasource/MediaSource.idl:

LayoutTests:
Fix an inadevntant editing error in mediasource-endofstream-invaliderror.html, and fix missing
whitespace at the end of http/tests/media/media-source/mediasource-endofstream-invaliderror-expected.txt.

* http/tests/media/media-source/mediasource-endofstream-invaliderror-expected.txt:
* http/tests/media/media-source/mediasource-endofstream-invaliderror.html:


Canonical link: https://commits.webkit.org/152706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170918 268f45cc-cd09-0410-ab3c-d52691b4dbfc